--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -4,6 +4,8 @@ html, body {
     font-family: sans-serif;
     font-size: 16px;
     line-height: 20px;
+    margin: 0;
+    padding: 0;
 }
 
 /* apply a natural box layout model to all elements */
